fixed form overlapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2113,3 +2113,7 @@ footer ul.shaps-img li:nth-child(3) {
   .blog-img img{
     padding-bottom: 1em;
   }
+  .contact_from_container{
+    padding: 3em 0em;
+  }
+  
